Added Bulk sync with proper response bodies
